--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,28 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background: green;
+}
+
+.numbers {
+  font-size: 900%;
+}
+
+.card {
+  border-radius: 20px;
+}
+
+.card-body {
+  padding-top: 0%;
+  padding-bottom: 0%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+.symbols {
+  font-size: 500%;
+}
+
+#lowerIcon {
+  transform: rotate(180deg);
+}
